[gd_scene load_steps=4 format=3 uid="uid://cm7tdgryglmqs"]

[ext_resource type="Script" path="res://view/movies_list_screen.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://l6xn0dd4xy5k" path="res://view/background.tscn" id="2_rbh5f"]
[ext_resource type="PackedScene" uid="uid://c7p7llxftbvl6" path="res://view/toolbar.tscn" id="3_00ffu"]

[node name="MoviesListScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Background" parent="." instance=ExtResource("2_rbh5f")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="Toolbar" parent="VBoxContainer" instance=ExtResource("3_00ffu")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Digite abaixo os nomes dos filmes da seleção, um por linha, e então clique em Avançar:"

[node name="MoviesListTextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="on_back" from="VBoxContainer/Toolbar" to="." method="_on_toolbar_on_back"]
[connection signal="on_next" from="VBoxContainer/Toolbar" to="." method="_on_toolbar_on_next"]
[connection signal="on_save" from="VBoxContainer/Toolbar" to="." method="_on_toolbar_on_save"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MoviesListTextEdit" to="." method="_on_MoviesListTextEdit_text_changed"]
